# graphics

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
Source/: Camera.cpp  Camera.h  IObject.h  Intersection.h  KDNode.cpp  KDNode.h  Light.cpp  Light.h  Lighting.cpp  Lighting.h  Main.cpp  Material.cpp  Material.h  ObjImporter.cpp  ObjImporter.h  Object.h  Rasteriser.cpp  Rasteriser.h  Ray.h  Raytracer.cpp  Raytracer.h  RenderableObject.h  Renderer.cpp  Renderer.h  SDLauxiliary.cpp  SDLauxiliary.h  Scene.h  Sphere.cpp  Sphere.h  TestModel.cpp  TestModel.h  TestTriangle.h  Texture.cpp  Texture.h  Tools.h  Triangle.cpp  Triangle.h  Types.h  camera.h  rasteriser.cpp
